Fixed page alignment/padding

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,7 +37,7 @@ header .player,
 header .room {
   display: flex;
   align-items: center;
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 header .player::before {
